Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerTextWrapped.quorum
class main
    action main
        integer a = "hello"
    end
end